# cf-test-repo-20260523

./: .gitattributes  .gitignore  ABANDONMENT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile.build  Jenkinsfile  LICENSE  PERMISSIONS.md  README.md  THIRD_PARTY_LICENSES.md  TRADEMARK.md  docker-compose.yaml  flash_remote.bat  generate_library_json.py  iram_diet.ld  platformio.ini
.github/workflows/: build-release.yml  compile-firmware.yml  compile-wasm.yml
docs/: IRAM_OVERFLOW_SOLUTION.md
include/: credentials.h.example
lib/AppDefs/: AppDefs.cpp  AppDefs.h  AppManifest.h  AppManifest_Includes.h  library.json
lib/AppManager/: AppManager.cpp  AppManager.h  library.json
lib/AudioManager/: AudioManager.cpp  AudioManager.h  library.json
lib/BatteryManager/: BatteryManager.cpp  BatteryManager.h  library.json
lib/BewilderYourBrain/: BewilderYourBrain.cpp  BewilderYourBrain.h
lib/Booper/: Booper.cpp  Booper.h  library.json
lib/BootAnimation/: BootAnimation.cpp  BootAnimation.h  library.json
lib/BreakoutGame/: BreakoutGame.cpp  BreakoutGame.h  BreakoutMath.h  library.json
lib/ButtonManager/: ButtonManager.cpp  ButtonManager.h  library.json
lib/ClockDisplay/: ClockDisplay.cpp  ClockDisplay.h  library.json
lib/CyberFidgie/: MyScreensaver.cpp  MyScreensaver.h  library.json
lib/DinoGame/: DinoGame.cpp  DinoGame.h  DinoSprites.h  library.json
lib/DisplayProxy/: DisplayProxy.cpp  DisplayProxy.h  library.json
lib/ExampleScreens/: ExampleScreens.cpp  ExampleScreens.h  library.json
lib/Eye/: Eye.cpp  Eye.h
lib/Flashlight/: Flashlight.cpp  Flashlight.h  library.json
lib/Fonts/: library.json
lib/Ghosts/: Ghosts.cpp  Ghosts.h
lib/Globals/: globals.cpp  globals.h  library.json
lib/GraveyardScreensaver/: GraveyardScreensaver.cpp  GraveyardScreensaver.h
lib/HAL/: HAL.cpp  HAL.h  library.json
lib/HALMock/: HALMock.cpp  HALMock.h
lib/Images/: images.cpp  images.h  library.json
lib/MatrixScreensaver/: MatrixScreensaver.cpp  MatrixScreensaver.h  fontNotoSansJPReg.h  library.json
lib/MenuManager/: Animation.cpp  Animation.h  MenuManager.cpp  MenuManager.h  UIElement.cpp  UIElement.h  library.json
lib/MusicPlayerApp/: BTScanner.cpp  BTScanner.h  ID3Scanner.cpp  ID3Scanner.h  MusicPlayerApp.cpp  MusicPlayerApp.h  library.json
lib/PixelWaterfallGame/: PixelWaterfallGame.cpp  PixelWaterfallGame.h
lib/PowerManager/: PowerManager.cpp  PowerManager.h  library.json
lib/RGBController/: RGBController.cpp  RGBController.h  library.json
lib/ReactionTimeGame/: ReactionTimeGame.cpp  ReactionTimeGame.h  library.json
lib/SPHFluidGame/: SPHFluidGame.cpp  SPHFluidGame.h  library.json
lib/SerialCli/: SerialCli.cpp  SerialCli.h
lib/SerialDisplay/: SerialDisplay.cpp  SerialDisplay.h  SerialDisplayApp.cpp  SerialDisplayApp.h  library.json
lib/SimonSaysGame/: SimonSaysGame.cpp  SimonSaysGame.h  library.json
lib/SliderPosition/: SliderPosition.cpp  SliderPosition.h  library.json
lib/Spaceship/: Spaceship.cpp  Spaceship.h  library.json
lib/SpectrumAnalyzer/: SpectrumAnalyzer.cpp  SpectrumAnalyzer.h
lib/Splooty/: Splooty.cpp  Splooty.h  library.json
lib/StratagemGame/: StratagemGame.cpp  StratagemGame.h  StratagemGameSprites.h  library.json
lib/WebPortalApp/: WebPortalApp.cpp  WebPortalApp.h  portal_page.h
scripts/: add_iram_diet.py  add_network_lib.py  analyze_iram.py  generate_version.py  hil_smoke_test.py  merge_firmware.py  merged_build.bat  test_acceptance.sh
src/: main.cpp
test/: README
test/test_breakout_input_mapping/: test_input_mapping.cpp
test/test_breakout_level_table/: test_level_table.cpp
test/test_breakout_paddle_math/: test_paddle_math.cpp
test/test_core_version/: test_version.cpp
wasm/: CMakeLists.txt  build.bat  build.sh  build_wasm.bat  build_wasm.sh  main_wasm.cpp
wasm/font_preview/: CMakeLists.txt  build.bat  build.sh  font_preview.cpp
wasm/hal/: HAL_WASM.cpp  audio_wasm.cpp  wasm_fonts.cpp  wasm_runtime.cpp
wasm/shims/: Adafruit_NeoPixel.h  Animation.h  App.h  AppManager.h  Arduino.h  AudioTools.h  ESPAsyncWebServer.h  MenuManager.h  OLEDDisplayFonts.h  OLEDDisplayFonts_real.h  Preferences.h  SSD1306Wire.h  SparkFun_LIS2DH12.h  SparkFun_MAX1704x_Fuel_Gauge_Arduino_Library.h  UIElement.h  WiFi.h  WiFiManager.h  Wire.h  cf_custom_app.h  esp_log.h  esp_sleep.h  esp_system.h  esp_task_wdt.h
wasm/shims/freertos/: FreeRTOS.h  task.h
